// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render maximum 10 languages in the searchbox results 1`] = `
<Filter
  facet={
    Object {
      "cs": 4,
      "g": 1,
      "java": 39,
      "js": 1,
    }
  }
  footer={
    <SearchableFilterFooter
      onQueryChange={[MockFunction]}
      options={
        Array [
          Object {
            "label": "Flex",
            "value": "flex",
          },
          Object {
            "label": "PHP",
            "value": "php",
          },
          Object {
            "label": "Python",
            "value": "py",
          },
          Object {
            "label": "c",
            "value": "c",
          },
          Object {
            "label": "d",
            "value": "d",
          },
          Object {
            "label": "e",
            "value": "e",
          },
          Object {
            "label": "f",
            "value": "f",
          },
          Object {
            "label": "h",
            "value": "h",
          },
          Object {
            "label": "i",
            "value": "i",
          },
          Object {
            "label": "k",
            "value": "k",
          },
        ]
      }
      organization={undefined}
      property="languages"
      query={
        Object {
          "languages": Array [
            "java",
            "g",
          ],
        }
      }
    />
  }
  getFacetValueForOption={[Function]}
  header={
    <FilterHeader
      name="projects.facets.languages"
    />
  }
  onQueryChange={[MockFunction]}
  options={
    Array [
      "java",
      "cs",
      "g",
      "js",
    ]
  }
  property="languages"
  query={
    Object {
      "languages": Array [
        "java",
        "g",
      ],
    }
  }
  renderOption={[Function]}
  value={
    Array [
      "java",
      "g",
    ]
  }
/>
`;

exports[`should render the languages facet with the selected languages 1`] = `
<Filter
  facet={
    Object {
      "cs": 4,
      "java": 39,
      "js": 1,
    }
  }
  footer={
    <SearchableFilterFooter
      onQueryChange={[MockFunction]}
      options={
        Array [
          Object {
            "label": "Flex",
            "value": "flex",
          },
          Object {
            "label": "PHP",
            "value": "php",
          },
          Object {
            "label": "Python",
            "value": "py",
          },
        ]
      }
      organization={undefined}
      property="languages"
      query={
        Object {
          "languages": Array [
            "java",
            "cs",
          ],
        }
      }
    />
  }
  getFacetValueForOption={[Function]}
  header={
    <FilterHeader
      name="projects.facets.languages"
    />
  }
  onQueryChange={[MockFunction]}
  options={
    Array [
      "java",
      "cs",
      "js",
    ]
  }
  property="languages"
  query={
    Object {
      "languages": Array [
        "java",
        "cs",
      ],
    }
  }
  renderOption={[Function]}
  value={
    Array [
      "java",
      "cs",
    ]
  }
/>
`;

exports[`should render the languages facet with the selected languages 2`] = `
<div
  className="search-navigator-facet-box"
  data-key="languages"
>
  <FilterHeader
    name="projects.facets.languages"
  />
  <div
    className="search-navigator-facet-list projects-facet-list"
  >
    <a
      className="facet search-navigator-facet projects-facet active"
      data-key="java"
      href="#"
      key="java"
      onClick={[Function]}
    >
      <span
        className="facet-name"
      >
        <SearchableFilterOption
          option={
            Object {
              "key": "java",
              "name": "Java",
            }
          }
          optionKey="java"
        />
      </span>
      <span
        className="facet-stat"
      >
        39
      </span>
    </a>
    <a
      className="facet search-navigator-facet projects-facet active"
      data-key="cs"
      href="#"
      key="cs"
      onClick={[Function]}
    >
      <span
        className="facet-name"
      >
        <SearchableFilterOption
          option={
            Object {
              "key": "cs",
              "name": "C#",
            }
          }
          optionKey="cs"
        />
      </span>
      <span
        className="facet-stat"
      >
        4
      </span>
    </a>
    <a
      className="facet search-navigator-facet projects-facet"
      data-key="js"
      href="#"
      key="js"
      onClick={[Function]}
    >
      <span
        className="facet-name"
      >
        <SearchableFilterOption
          option={
            Object {
              "key": "js",
              "name": "JavaScript",
            }
          }
          optionKey="js"
        />
      </span>
      <span
        className="facet-stat"
      >
        1
      </span>
    </a>
  </div>
  <SearchableFilterFooter
    onQueryChange={[MockFunction]}
    options={
      Array [
        Object {
          "label": "Flex",
          "value": "flex",
        },
        Object {
          "label": "PHP",
          "value": "php",
        },
        Object {
          "label": "Python",
          "value": "py",
        },
      ]
    }
    property="languages"
    query={
      Object {
        "languages": Array [
          "java",
          "cs",
        ],
      }
    }
  />
</div>
`;

exports[`should render the languages without the ones in the facet 1`] = `
<Filter
  facet={
    Object {
      "cs": 4,
      "java": 39,
      "js": 1,
    }
  }
  footer={
    <SearchableFilterFooter
      onQueryChange={[MockFunction]}
      options={
        Array [
          Object {
            "label": "Flex",
            "value": "flex",
          },
          Object {
            "label": "PHP",
            "value": "php",
          },
          Object {
            "label": "Python",
            "value": "py",
          },
        ]
      }
      organization={undefined}
      property="languages"
      query={
        Object {
          "languages": null,
        }
      }
    />
  }
  getFacetValueForOption={[Function]}
  header={
    <FilterHeader
      name="projects.facets.languages"
    />
  }
  onQueryChange={[MockFunction]}
  options={
    Array [
      "java",
      "cs",
      "js",
    ]
  }
  property="languages"
  query={
    Object {
      "languages": null,
    }
  }
  renderOption={[Function]}
/>
`;
